add cover and file image to animals and make photos unrequired
