# app/Http/Controllers/User/AnimalController.php
@@ -114,7 +114,7 @@ class AnimalController extends Controller
      *       @OA\MediaType(
      *           mediaType="multipart/form-data",
      *           @OA\Schema(
-     *              required={"name[ar]", "photos[0]", "category_id", "primary_color_id", "birth_date", "gender", "status"},
+     *              required={"name[ar]", "category_id", "primary_color_id", "birth_date", "gender", "status"},
      *              @OA\Property(property="branch_id", type="integer"),
      *              @OA\Property(property="name[en]", type="string"),
      *              @OA\Property(property="name[ar]", type="string"),
@@ -158,6 +158,8 @@ class AnimalController extends Controller
      *              @OA\Property(property="size", type="string", enum={"small", "medium", "large"}),
      *              @OA\Property(property="digital_link", type="string"),
      *              @OA\Property(property="generate_public", type="boolean", enum={0, 1}),
+     *              @OA\Property(property="cover_image", type="file"),
+     *              @OA\Property(property="file_image", type="file"),
      *              @OA\Property(property="ownership_date", type="date"),
      *          )
      *       )
@@ -290,6 +292,8 @@ class AnimalController extends Controller
      *              @OA\Property(property="digital_link", type="string"),
      *              @OA\Property(property="generate_public", type="boolean", enum={0, 1}),
      *              @OA\Property(property="ownership_date", type="date"),
+     *              @OA\Property(property="cover_image", type="file"),
+     *              @OA\Property(property="file_image", type="file"),
      *              @OA\Property(property="_method", type="string", format="string", example="PUT")
      *           )
      *       )
